--- a/index.html
+++ b/index.html
@@ -10,11 +10,17 @@
 	  href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
 	  integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
 	  crossorigin="anonymous">
+    <style>
+      table td { font-family: monospace;}
+      table td:hover{ background-color: silver;}
+      tbody tr:nth-child(4n+1) {  border-top:10px solid #000;}
+    </style>
     <script src=laykari.js></script>
+    
   </head>
  
   <body>
-    <table  class="table table-dark table-bordered table-hover table-sm">
+    <table  class="table table-dark table-bordered table-sm">
       <tbody id=laykari> </tbody>
     </table>
   </body>
