Add separator in table

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <style>
       table td { font-family: monospace;}
       table td:hover{ background-color: silver;}
-      tbody tr:nth-child(4n+1) {  border-top:10px solid #000;}
+      tbody tr:nth-child(4n) {  border-bottom:10px solid #000;}
     </style>
     <script src=laykari.js></script>
     
