--- a/index.html
+++ b/index.html
@@ -23,5 +23,12 @@
     <table  class="table table-dark table-bordered table-sm">
       <tbody id=laykari> </tbody>
     </table>
+    <footer>
+      Usage examples:
+      <ul>
+	<li>tabla-laykari/?n=4   <li>tabla-laykari/?n=4&gaps
+      </ul>
+      
+    </footer>
   </body>
 </html>
