Add numbers to akshars

--- a/carnatic-taals.html
+++ b/carnatic-taals.html
@@ -14,6 +14,9 @@
  
   <body>
     <div class="container-sm">
+      <h2> Suladi Sapta Tala system </h2>
+      <p>The Suladi Sapta Tala system  (which was popularized during the time of Purandara Dasa (1484 - 1564) and has been attributed to him) is based on 7 basic taals which employ three basic angaas. The ancient system of taals used more angs as listed below, but the Suladi system uses only the first three in the list.
+      </p>
     <h3> Angas </h3>
    <table  class="table table-dark table-bordered table-sm">
       <tbody id=angas> </tbody>
