--- a/compositions.html
+++ b/compositions.html
@@ -19,6 +19,7 @@
   </head>
  
   <body>
+    <button onClick="stopAudio()">Stop Audio</button>
     <p>Tempo: <span id="tempo_value" style="color:red;font-weight:bold;">20</span><br>
       10
       <input type="range" min="10" max="200" step="5" id="tempo_slider"
